BLL, MPP, BE de Usuario

--- a/BE/BE.csproj
+++ b/BE/BE.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="CredencialBE.cs" />
     <Compile Include="EntityBE.cs" />
+    <Compile Include="IdiomaBE.cs" />
     <Compile Include="UsuarioBE.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
