Perfiles de Usuario BE, BLL, MPP, Listado y Alta

--- a/BE/BE.csproj
+++ b/BE/BE.csproj
@@ -46,6 +46,10 @@
     <Compile Include="CredencialBE.cs" />
     <Compile Include="EntityBE.cs" />
     <Compile Include="IdiomaBE.cs" />
+    <Compile Include="PerfilComponenteBE.cs" />
+    <Compile Include="PerfilFamiliaBE.cs" />
+    <Compile Include="PerfilPatenteBE.cs" />
+    <Compile Include="PerfilPermisoBE.cs" />
     <Compile Include="UsuarioBE.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
