--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -147,9 +147,11 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\dashboard.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\img\Logo.png" />
+    <Content Include="Content\img\undraw_posting_photo.svg" />
     <Content Include="Content\login.css" />
     <Content Include="Content\sidebars.css" />
     <Content Include="favicon.ico" />
@@ -190,6 +192,11 @@
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.eot" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\chart-area.js" />
+    <Content Include="Scripts\chart-bar.js" />
+    <Content Include="Scripts\chart-pie.js" />
+    <Content Include="Scripts\chart.js" />
+    <Content Include="Scripts\datatables.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
@@ -226,6 +233,7 @@
     <Content Include="Views\Permisos\GrupoPermisos.cshtml" />
     <Content Include="Views\Permisos\CrearGrupo.cshtml" />
     <Content Include="Views\Permisos\EditarGrupo.cshtml" />
+    <Content Include="Views\Permisos\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
