ajuste en Edición de Grupos para evitar problemas de recursividad. Comienzo de la vista de Perfil de Usuario

--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -234,6 +234,7 @@
     <Content Include="Views\Permisos\CrearGrupo.cshtml" />
     <Content Include="Views\Permisos\EditarGrupo.cshtml" />
     <Content Include="Views\Permisos\Delete.cshtml" />
+    <Content Include="Views\Permisos\EditarPerfilUsuario.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
