--- a/MPP/MPP.csproj
+++ b/MPP/MPP.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BitacoraMPP.cs" />
     <Compile Include="IdiomaMPP.cs" />
     <Compile Include="PerfilMPP.cs" />
     <Compile Include="UsuarioMPP.cs" />
