--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -246,6 +246,7 @@
     <Content Include="Views\Idioma\Index.cshtml" />
     <Content Include="Views\Idioma\Create.cshtml" />
     <Content Include="Views\Idioma\Edit.cshtml" />
+    <Content Include="Views\Idioma\Traduccion.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
