--- a/UI/Web.config
+++ b/UI/Web.config
@@ -44,6 +44,10 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="X.PagedList.Mvc" publicKeyToken="c6e0b5b21f916f4f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.9.1.0" newVersion="7.9.1.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
