Validaciones en ABM Idioma

--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -259,6 +259,7 @@
     <Content Include="Views\Idioma\Create.cshtml" />
     <Content Include="Views\Idioma\Edit.cshtml" />
     <Content Include="Views\Idioma\Traduccion.cshtml" />
+    <Content Include="Views\Idioma\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
