--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -303,6 +303,7 @@
     <Content Include="Views\Idioma\Edit.cshtml" />
     <Content Include="Views\Idioma\Traduccion.cshtml" />
     <Content Include="Views\Idioma\Delete.cshtml" />
+    <Content Include="Views\Usuario\CambiarContraseña.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
