--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -323,6 +323,10 @@
       <Project>{673cc286-62eb-4ec0-b5ed-b92772a47d61}</Project>
       <Name>BLL</Name>
     </ProjectReference>
+    <ProjectReference Include="..\GestorDeArchivo\GestorDeArchivo.csproj">
+      <Project>{460e7b06-031e-4b38-a8a2-1e6419c5ab39}</Project>
+      <Name>GestorDeArchivo</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Seguridad\Seguridad.csproj">
       <Project>{28f14eba-2373-42c0-99d2-11d66584e177}</Project>
       <Name>Seguridad</Name>
