--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -306,6 +306,7 @@
     <Content Include="Views\Activo\Index.cshtml" />
     <Content Include="Views\Activo\Create.cshtml" />
     <Content Include="Views\Activo\Edit.cshtml" />
+    <Content Include="Views\Activo\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
