--- a/BE/BE.csproj
+++ b/BE/BE.csproj
@@ -51,6 +51,8 @@
     <Compile Include="IdiomaBE.cs" />
     <Compile Include="IdiomaEtiquetaBE.cs" />
     <Compile Include="IdiomaTraduccionBE.cs" />
+    <Compile Include="LicenciaBE.cs" />
+    <Compile Include="LicenciaModalidadBE.cs" />
     <Compile Include="MarcaBE.cs" />
     <Compile Include="PerfilComponenteBE.cs" />
     <Compile Include="PerfilFamiliaBE.cs" />
