--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ActivoBLL.cs" />
     <Compile Include="BackupBLL.cs" />
     <Compile Include="BitacoraBLL.cs" />
+    <Compile Include="DepartamentoBLL.cs" />
     <Compile Include="DigitoVerificadorBLL.cs" />
     <Compile Include="IdiomaBLL.cs" />
     <Compile Include="LicenciaBLL.cs" />
