--- a/MPP/MPP.csproj
+++ b/MPP/MPP.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ActivoMPP.cs" />
     <Compile Include="BackupMPP.cs" />
     <Compile Include="BitacoraMPP.cs" />
+    <Compile Include="DepartamentoMPP.cs" />
     <Compile Include="DigitoVerificadorMPP.cs" />
     <Compile Include="IdiomaMPP.cs" />
     <Compile Include="LicenciaMPP.cs" />
