--- a/MPP/MPP.csproj
+++ b/MPP/MPP.csproj
@@ -45,13 +45,16 @@
     <Compile Include="ActivoMPP.cs" />
     <Compile Include="BackupMPP.cs" />
     <Compile Include="BitacoraMPP.cs" />
+    <Compile Include="ColaboradorMPP.cs" />
     <Compile Include="DepartamentoMPP.cs" />
     <Compile Include="DigitoVerificadorMPP.cs" />
     <Compile Include="IdiomaMPP.cs" />
     <Compile Include="LicenciaMPP.cs" />
     <Compile Include="MarcaMPP.cs" />
+    <Compile Include="PerfilDeHardwareMPP.cs" />
     <Compile Include="PerfilMPP.cs" />
     <Compile Include="ProductoSoftwareMPP.cs" />
+    <Compile Include="UbicacionMPP.cs" />
     <Compile Include="UsuarioMPP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
