--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -331,6 +331,7 @@
     <Content Include="Views\Colaborador\Index.cshtml" />
     <Content Include="Views\Colaborador\Create.cshtml" />
     <Content Include="Views\Colaborador\Edit.cshtml" />
+    <Content Include="Views\Colaborador\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
