--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -335,6 +335,7 @@
     <Content Include="Views\Colaborador\Details.cshtml" />
     <Content Include="Views\PerfilHardware\Index.cshtml" />
     <Content Include="Views\PerfilHardware\Create.cshtml" />
+    <Content Include="Views\PerfilHardware\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
