--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActivoBLL.cs" />
+    <Compile Include="AsignacionActivoBLL.cs" />
     <Compile Include="BackupBLL.cs" />
     <Compile Include="BitacoraBLL.cs" />
     <Compile Include="ColaboradorBLL.cs" />
