--- a/MPP/MPP.csproj
+++ b/MPP/MPP.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActivoMPP.cs" />
+    <Compile Include="AsignacionActivoMPP.cs" />
     <Compile Include="BackupMPP.cs" />
     <Compile Include="BitacoraMPP.cs" />
     <Compile Include="ColaboradorMPP.cs" />
