--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -133,6 +133,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ActivoController.cs" />
+    <Compile Include="Controllers\AsignacionActivoController.cs" />
     <Compile Include="Controllers\BitacoraController.cs" />
     <Compile Include="Controllers\ColaboradorController.cs" />
     <Compile Include="Controllers\DbController.cs" />
@@ -336,10 +337,12 @@
     <Content Include="Views\PerfilHardware\Index.cshtml" />
     <Content Include="Views\PerfilHardware\Create.cshtml" />
     <Content Include="Views\PerfilHardware\Edit.cshtml" />
+    <Content Include="Views\PerfilHardware\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\AsignacionActivo\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
