--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -338,11 +338,12 @@
     <Content Include="Views\PerfilHardware\Create.cshtml" />
     <Content Include="Views\PerfilHardware\Edit.cshtml" />
     <Content Include="Views\PerfilHardware\Details.cshtml" />
+    <Content Include="Views\AsignacionActivo\Index.cshtml" />
+    <Content Include="Views\AsignacionActivo\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\AsignacionActivo\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
