--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\IdiomaController.cs" />
     <Compile Include="Controllers\LicenciaController.cs" />
+    <Compile Include="Controllers\LocalizacionController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MarcaController.cs" />
     <Compile Include="Controllers\PerfilHardwareController.cs" />
@@ -340,6 +341,8 @@
     <Content Include="Views\PerfilHardware\Details.cshtml" />
     <Content Include="Views\AsignacionActivo\Index.cshtml" />
     <Content Include="Views\AsignacionActivo\Create.cshtml" />
+    <Content Include="Views\Localizacion\Index.cshtml" />
+    <Content Include="Views\Localizacion\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
