--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -346,6 +346,7 @@
     <Content Include="Views\Localizacion\Edit.cshtml" />
     <Content Include="Views\Localizacion\Details.cshtml" />
     <Content Include="Views\AsignacionActivo\Finalizar.cshtml" />
+    <Content Include="Views\AsignacionActivo\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
