--- a/MPP/MPP.csproj
+++ b/MPP/MPP.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="ActivoMPP.cs" />
     <Compile Include="AsignacionActivoMPP.cs" />
+    <Compile Include="AsignacionLicenciaMPP.cs" />
     <Compile Include="BackupMPP.cs" />
     <Compile Include="BitacoraMPP.cs" />
     <Compile Include="ColaboradorMPP.cs" />
