Finalizar asignación de licencia

--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -350,6 +350,7 @@
     <Content Include="Views\AsignacionActivo\Details.cshtml" />
     <Content Include="Views\AsignacionLicencia\Index.cshtml" />
     <Content Include="Views\AsignacionLicencia\Create.cshtml" />
+    <Content Include="Views\AsignacionLicencia\Finalizar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
