Copia de Perfiles de Hardware

--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -355,6 +355,7 @@
     <Content Include="Views\AsignacionLicencia\Details.cshtml" />
     <Content Include="Views\Inteligencia\AnalisisActivosOciosos.cshtml" />
     <Content Include="Views\Inteligencia\AnalisisColaboradorActivos.cshtml" />
+    <Content Include="Views\PerfilHardware\Copiar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
