--- a/UI/Web.config
+++ b/UI/Web.config
@@ -48,6 +48,10 @@
         <assemblyIdentity name="X.PagedList.Mvc" publicKeyToken="c6e0b5b21f916f4f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-7.9.1.0" newVersion="7.9.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
