--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -263,6 +263,7 @@
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
+    <Content Include="Content\img\favicon.ico" />
     <Content Include="Content\img\Logo.png" />
     <Content Include="Content\img\undraw_posting_photo.svg" />
     <Content Include="Content\login.css" />
