Reporte Asignación de Licencias

--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -448,6 +448,7 @@
     <Content Include="Views\PerfilHardware\Copiar.cshtml" />
     <Content Include="Views\Reportes\ReporteAsignacionActivos.cshtml" />
     <Content Include="Views\Reportes\ReporteCicloDeVidaActivos.cshtml" />
+    <Content Include="Views\Reportes\ReporteAsignacionLicencias.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
